# intellij-bsp

./: .gitignore  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
.github/cloud_storage_uploader/: pyproject.toml
.github/cloud_storage_uploader/src/: main.py  uploader.py
.github/workflows/: publish.yml
buildSrc/src/main/kotlin/: intellijbsp.kotlin-conventions.gradle.kts  versions.kt
gradle/: libs.versions.toml
jps-compilation/: build.gradle.kts
magicmetamodel/: build.gradle.kts
magicmetamodel/src/main/kotlin/org/jetbrains/magicmetamodel/: BazelBuildServer.kt  MagicMetaModel.kt
magicmetamodel/src/main/kotlin/org/jetbrains/magicmetamodel/impl/: BenchmarkFlags.kt  DefaultMagicMetaModelState.kt  MagicMetaModelImpl.kt  NonOverlappingTargets.kt  PerformanceLogger.kt  TargetIdToModuleDetails.kt  TargetIdToModuleDetailsMap.kt  TargetsDetailsForDocumentProvider.kt
magicmetamodel/src/main/resources/: intellij.bsp.magicmetamodel.xml
magicmetamodel/src/test/kotlin/org/jetbrains/magicmetamodel/: MagicMetaModelTest.kt
probe/: build.gradle.kts
probe-setup/src/main/resources/: ideprobe.conf
protocol/: build.gradle.kts
protocol/src/main/resources/: intellij.bsp.extended.protocol.xml
src/main/resources/: intellij.bsp.main.xml
src/main/resources/messages/: BspPluginBundle.properties
src/main/resources/messages/widgets/: BspAllTargetsWidgetBundle.properties
test-utils/: build.gradle.kts
workspacemodel/: build.gradle.kts
workspacemodel/src/main/resources/: intellij.bsp.workspacemodel.xml
(+233 files in other folders)
