[tool.poetry]
name = "cloud-storage-uploader"
version = "0.1.0"
description = ""
authors = ["Przemysław Fuchs <fuchs.przemyslaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-storage = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
